# uvConvertor

./: .gitignore  Cargo.toml  LICENSE  README.md  README_CN.md  Readme.md  main.cpp  uvconvertor.cpp  uvconvertor.hpp  xmake.lua
examples/: convert.ps1  convert.sh
examples/resource/project/MDK-ARM/: uv.uvprojx
examples/resource/project/MDK-ARM/output/: executable.build_log.htm  project_target.dep  uv_target.dep
src/: main.rs
src/uvconvertor/: lib.rs  mod.rs  uvconvertor.rs
